# bmstu-ese

./: .gitignore
lab_01/: demo_2022.mpp  report.docx
lab_01/report/: report.docx
lab_01/src/: task_1.mpp  task_2.mpp  task_3.mpp  task_4.mpp  training_var_1.mpp
lab_02/report/: report.docx
lab_02/src/: task_1.mpp  task_2.mpp  task_3.mpp  training_var_1.mpp
lab_03/report/: report.docx
lab_03/src/: task_1.mpp  task_2.mpp  task_2_new.mpp  task_2_very_new.mpp  task_3.mpp  task_3_new.mpp  task_3_very_new.mpp
lab_04/src/: finish.mpp  lab3_3.mpp  task_1.mpp  task_1_new.mpp  task_2_new.mpp  task_3_new.mpp  task_4_new.mpp  task_5_6_7_fix_new_wrong.mpp  task_5_6_7_fix_wrong.mpp  task_5_new.mpp  task_5_new_fix_no_work_wrong.mpp
lab_05/report/: report.docx
lab_05/src/: task.mpp  task_1.mpp  task_3.mpp
lab_06/report/: report.docx
lab_06/src/: Makefile  README.md  code.py  main.py  pyproject.toml  res.txt
lab_06/src/cocomo/: cocomo.py  constants.py
lab_06/src/study/: study.py
rk_01/: 1.mpp  10.mpp  2.mpp  3.mpp  4.mpp  5.mpp  6.mpp  7.mpp  8.mpp  8_autofix.mpp  8_different_profiles.mpp  9.mpp  9_software_base_plan.mpp  report.docx
